--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <%= render partial: "shared/nav" %>
+    <%= render partial: "layouts/nav" %>
     <%= yield %>
-    <%= render partial: "shared/footer" %>
+    <%= render partial: "layouts/footer" %>
   </body>
 </html>
