--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,27 @@
 <p style="color: green"><%= notice %></p>
 
+ 
+
+
 <h1>Products</h1>
+
+
+<%= search_form_for @q do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title_cont, class: 'form-control' %>
+  <%= f.submit class: 'btn btn-primary' %>
+<% end %>
+
+
 
 <table class="table table-striped table-hover">
   <thead>
     <tr>
       <th scope="col">id</th>
-      <th scope="col">title</th>
-      <th scope="col">Price</th>
-      <th scope="col">Status</th>
+      <th scope="col"><%= sort_link(@q, :title) %>
+</th>
+      <th scope="col"><%= sort_link(@q, :price) %></th>
+      <th scope="col"><%= sort_link(@q, :status) %></th>
       <th scope="col">User</th>
     </tr>
   </thead>
@@ -20,5 +33,6 @@
 </table>
 
 
+<%= will_paginate @products, list_classes: %w(pagination justify-content-end) %>
 
 
